Fixed datepicker warning alignment and unit test warnings

--- a/src/components/shared/MultiSelect/index.scss
+++ b/src/components/shared/MultiSelect/index.scss
@@ -4,6 +4,7 @@
 .easi-multiselect--tag {
   .usa-icon {
     cursor: pointer;
+    flex-shrink: 0;
   }
 }
 
